# tapyrus-spv

./: Cargo.toml  README.md  bitbucket-pipelines.yml
.github/workflows/: ci.yml  ci_on_push.yml
scripts/: build-ndk.sh  docs.sh  fmt.sh  setup-git.sh
src/: chain.rs  db.rs  lib.rs  test_helper.rs  test_helpers.rs
src/chain/: block_index.rs  chain.rs  db.rs  mod.rs  store.rs
src/chain/store/: db_chain_store.rs  mod.rs  on_memory_chain_store.rs
src/ffi/: android.rs  c.rs  mod.rs  tapyrus_spv.h
src/network/: block_header_download.rs  blockheaderdownload.rs  bytes.rs  codec.rs  error.rs  handle_connection.rs  handshake.rs  mod.rs  peer.rs  time.rs
src/network/utils/: bytes.rs  codec.rs  mod.rs
tests/: tapyrus-spv.rs
