[package]
name = "tapyrus-spv"
version = "0.1.0"
authors = ["Kohei Taniguchi <kohei@chaintope.com>"]
edition = "2018"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.12.3", default-features = false }
android_logger = "0.8"

[lib]
name = "tapyrus_spv"
path = "src/lib.rs"
crate-type=["lib", "cdylib", "staticlib"]

[dependencies]
bitcoin = "0.18.0"
bitcoin_hashes = "0.3"
log="0.4"
env_logger = "0.7.1"
tokio = "0.1.22"
rand = "0.7.0"
bytes = "0.4.12"
hex = "0.3.2"